docs/en/5.0.0/api/Network.md
#Network
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;14</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mcancel" data-target="cMethodcancel" class="autouncollapse">cancel</a></li><li><a href="#mconnectWan" data-target="cMethodconnectWan" class="autouncollapse">connectWan</a></li><li><a href="#mdetectConnection" data-target="cMethoddetectConnection" class="autouncollapse">detectConnection</a></li><li><a href="#mdisconnectWan" data-target="cMethoddisconnectWan" class="autouncollapse">disconnectWan</a></li><li><a href="#mdownloadFile" data-target="cMethoddownloadFile" class="autouncollapse">downloadFile</a></li><li><a href="#mget" data-target="cMethodget" class="autouncollapse">get</a></li><li><a href="#mhasCellNetwork" data-target="cMethodhasCellNetwork" class="autouncollapse">hasCellNetwork</a></li><li><a href="#mhasNetwork" data-target="cMethodhasNetwork" class="autouncollapse">hasNetwork</a></li><li><a href="#mhasWifiNetwork" data-target="cMethodhasWifiNetwork" class="autouncollapse">hasWifiNetwork</a></li><li><a href="#mpost" data-target="cMethodpost" class="autouncollapse">post</a></li><li><a href="#mstartStatusNotify" data-target="cMethodstartStatusNotify" class="autouncollapse">startStatusNotify</a></li><li><a href="#mstopDetectingConnection" data-target="cMethodstopDetectingConnection" class="autouncollapse">stopDetectingConnection</a></li><li><a href="#mstopStatusNotify" data-target="cMethodstopStatusNotify" class="autouncollapse">stopStatusNotify</a></li><li><a href="#muploadFile" data-target="cMethoduploadFile" class="autouncollapse">uploadFile</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;8</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Class Properties</i></b></a><li><a href="#pauthPassword" data-target="cPropertyauthPassword" class="autouncollapse">authPassword</a></li><li><a href="#pauthType" data-target="cPropertyauthType" class="autouncollapse">authType</a></li><li><a href="#pauthUser" data-target="cPropertyauthUser" class="autouncollapse">authUser</a></li><li><a href="#pheaders" data-target="cPropertyheaders" class="autouncollapse">headers</a></li><li><a href="#phttpVerb" data-target="cPropertyhttpVerb" class="autouncollapse"><span class="text-info">httpVerb</span></a></li><li><a href="#presponseTimeout" data-target="cPropertyresponseTimeout" class="autouncollapse">responseTimeout</a></li><li><a href="#purl" data-target="cPropertyurl" class="autouncollapse">url</a></li><li><a href="#pverifyPeerCertificate" data-target="cPropertyverifyPeerCertificate" class="autouncollapse"><span class="text-info">verifyPeerCertificate</span></a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;5</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Request a notification from the system when network availability changes</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Check whether the network is available</a></li><li><a href="#e2" data-target="eExample2" class="autouncollapse">Download file and save it to permanent storage</a></li><li><a href="#e3" data-target="eExample3" class="autouncollapse">Upload files via HTTP POST</a></li><li><a href="#e4" data-target="eExample4" class="autouncollapse">Network POST Using Ruby's Lambda</a></li></ul></div><div class="btn-group"><a href="#Remarks" class="btn"><i class="icon-warning-sign"></i> Remarks<sup>&nbsp;3</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#r0" data-target="rRemark0" class="autouncollapse">Detecting a connection through proxies</a></li><li><a href="#r1" data-target="rRemark1" class="autouncollapse">Detecting a connection over WAN</a></li><li><a href="#r2" data-target="rRemark2" class="autouncollapse">Preventing access to the device (WEH / WM)</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>This API class allows you to interact with either the WAN or WiFI network of the device.</p>
<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mcancel'/><div class=' method  js ruby android ios wp8' id='mcancel'><h3><strong  >cancel</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcancel1" data-toggle="tab">Description</a></li><li ><a href="#mcancel2" data-toggle="tab">Parameters</a></li><li ><a href="#mcancel4" data-toggle="tab">Return</a></li><li ><a href="#mcancel6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-cancel'><div class="tab-pane fade active in" id="mcancel1"><p>Cancel the request identified by callback. If callback is not specified then all requests will be canceled.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcancel2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mcancel3"></div><div class="tab-pane fade" id="mcancel4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mcancel6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.cancel(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.cancel(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mconnectWan'/><div class=' method  js ruby' id='mconnectWan'><h3><strong  >connectWan</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> connectionDestination, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mconnectWan1" data-toggle="tab">Description</a></li><li ><a href="#mconnectWan2" data-toggle="tab">Parameters</a></li><li ><a href="#mconnectWan3" data-toggle="tab">Callback</a></li><li ><a href="#mconnectWan4" data-toggle="tab">Return</a></li><li ><a href="#mconnectWan6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-connectWan'><div class="tab-pane fade active in" id="mconnectWan1"><p>Connects the device to a Wide Area Network. The connection destination must be first configured through the Connection Manager (on the device) and the destination name provided to this method. If a connection is already established, you must first call disconnectWan before attempting another connection. A list of available connection destinations is written to the log file when either connectWan or disconnectWan are first specified. Specify the connection as &lsquo;Internet&rsquo; to use the default internet connection defined on the device. If the specified destination does not exist no connection attempt will be made and an entry will be made in the log file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mconnectWan2"><div><p><strong>Parameters</strong></p><ul><li>connectionDestination : <span class='text-info'>STRING</span><p><p>The connection in the Windows Connection manager to use, specify &lsquo;Internet&rsquo; to use the default internet connection.</p>
 </p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mconnectWan3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>phoneSignalStrength : <span class='text-info'>STRING</span><p><p>The signal strength of the phone as a percentage of maximum strength. Returned as a number between 0 and 100. If there is no phone service this field will be 0.</p>
 </p></li><li>networkOperator : <span class='text-info'>STRING</span><p><p>The name of the current network operator associated with the SIM card.</p>
 </p></li><li>connectionTypeAvailable : <span class='text-info'>STRING</span><p><p>The current data connection type available to RhoElements as provided by the Network. Values can be &lsquo;Unavailable&rsquo;, GPRS, 1XRTT, EVDO, EDGE, UMTS, EVDV or HSDPA.</p>
 </p></li><li>connectionTypeConnected : <span class='text-info'>STRING</span><p><p>The data connection type to which the device is currently connected. The values returned are identical to connectionTypeAvailable, with the exception that &lsquo;Not Connected&rsquo; replaces &lsquo;Unavailable&rsquo;.</p>
 </p></li><li>connectionManagerMessage : <span class='text-info'>STRING</span><p><p>This is the last received status from the Connection Manager. Do NOT use this parameter to determine if you are able to physically send / receive data to a remote host, it only provides an indication of whether the Connection Manager believes the connection is available. To determine if you are connected to a remote host use the detectConnection method.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mconnectWan4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mconnectWan6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.connectWan(<span class="text-info">STRING</span> connectionDestination, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.connectWan(<span class="text-info">STRING</span> connectionDestination, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mdetectConnection'/><div class=' method  js ruby android ios wp8' id='mdetectConnection'><h3><strong  >detectConnection</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdetectConnection1" data-toggle="tab">Description</a></li><li ><a href="#mdetectConnection2" data-toggle="tab">Parameters</a></li><li ><a href="#mdetectConnection3" data-toggle="tab">Callback</a></li><li ><a href="#mdetectConnection4" data-toggle="tab">Return</a></li><li ><a href="#mdetectConnection6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-detectConnection'><div class="tab-pane fade active in" id="mdetectConnection1"><p>Begins polling the specified host on the specified URL to check if there is a network connection available. The connection status is reported back via the provided callback. Note that callback will be called only if connection status has changed compared to previous polling.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdetectConnection2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>Properties map.</p>
 </p></li><ul><li>host : <span class='text-info'>STRING</span><span class='label '> Default: www.motorolasolutions.com</span><p><p>When detecting a network connection, this is the URL or IP address of the server to attempt to connect to.</p>
 </p></li><li>port : <span class='text-info'>INTEGER</span><span class='label '> Default: 80</span><p><p>When detecting a network connection, this is the port on the host to connect to.</p>
 </p></li><li>pollInterval : <span class='text-info'>INTEGER</span><span class='label '> Default: 30000</span><p><p>The time, in milliseconds, between each check for a connection. Note that the actual connection report interval will be the sum of the poll interval and the detection timeout.  The minimum allowed value is 5000ms.</p>
 </p></li><li>detectionTimeout : <span class='text-info'>INTEGER</span><span class='label '> Default: 1000</span><p><p>The amount of time to attempt to connect to the specified URL before giving up and assuming &lsquo;disconnected&rsquo;.  Value is specified in milliseconds.</p>
 </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mdetectConnection3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>connectionInformation : <span class='text-info'>STRING</span><p><p>Whether the device is connected to the specified host and port.  Either &lsquo;Connected&rsquo; or &lsquo;Disconnected&rsquo;.</p>
 </p></li><li>failureMessage : <span class='text-info'>STRING</span><p><p>If the device is disconnected this field will contain information about why the connection failed.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mdetectConnection4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mdetectConnection6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.detectConnection(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.detectConnection(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mdisconnectWan'/><div class=' method  js ruby' id='mdisconnectWan'><h3><strong  >disconnectWan</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdisconnectWan1" data-toggle="tab">Description</a></li><li ><a href="#mdisconnectWan4" data-toggle="tab">Return</a></li><li ><a href="#mdisconnectWan6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-disconnectWan'><div class="tab-pane fade active in" id="mdisconnectWan1"><p>Disconnects the current WAN connection. DisconnectWan will only affect connections established by RhoElements so if you have not previously called connectWan this function will have no effect.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mdisconnectWan2"></div><div class="tab-pane fade" id="mdisconnectWan3"></div><div class="tab-pane fade" id="mdisconnectWan4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mdisconnectWan6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.disconnectWan()</code> </li><li>Ruby: <code>Rho::Network.disconnectWan()</code></li></ul></li></ul></div></div></div>  </div><a name ='mdownloadFile'/><div class=' method  js ruby android ios wp8' id='mdownloadFile'><h3><strong  >downloadFile</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdownloadFile1" data-toggle="tab">Description</a></li><li ><a href="#mdownloadFile2" data-toggle="tab">Parameters</a></li><li ><a href="#mdownloadFile3" data-toggle="tab">Callback</a></li><li ><a href="#mdownloadFile4" data-toggle="tab">Return</a></li><li ><a href="#mdownloadFile6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-downloadFile'><div class="tab-pane fade active in" id="mdownloadFile1"><p>Download a file to the specified filename. Note: if &lsquo;overwriteFile&rsquo; flag is default or false, the HEAD request to the server will be performed before actual download to retrieve &lsquo;last-modified&rsquo; header which is used to support resuming interrupted download. If targeted server doesn&rsquo;t support HEAD requests, &lsquo;overwriteFile&rsquo; should be set to true.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdownloadFile2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>Properties to be used in this request.</p>
 </p></li><ul><li>url : <span class='text-info'>STRING</span><p><p>URL of file to be downloaded. HTTP and HTTPS protocols are supported.</p>
 </p></li><li>filename : <span class='text-info'>STRING</span><p><p>The path and name of the file to be uploaded.</p>
 </p></li><li>overwriteFile : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>OverWriteFile will overwrite the destination file if it already exists.</p>
 </p></li><li>createFolders : <span class='text-info'>BOOLEAN</span><span class='label '> Default: false</span><p><p>CreateFolders can automatically create the directory path.</p>
 </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mdownloadFile3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>body : <span class='text-info'>STRING</span><p><p>The body of the HTTP response.</p>
 </p></li><li>headers : <span class='text-info'>HASH</span><p><p>A hash containing the response headers.</p>
 </p></li><li>cookies : <span class='text-info'>STRING</span><p><p>The server cookies, parsed and usable for subsequent requests.</p>
 </p></li><li>http_error : <span class='text-info'>INTEGER</span><p><p>HTTP error code if response code was not 200.</p>
 </p></li><li>fileExists : <span class='text-info'>BOOLEAN</span><p><p>When overwriteFile is false and file exists, when error return and this flag set to true.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mdownloadFile4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li>body : <span class='text-info'>STRING</span><p><p>The body of the HTTP response.</p>
 </p></li><li>headers : <span class='text-info'>HASH</span><p><p>A hash containing the response headers.</p>
 </p></li><li>cookies : <span class='text-info'>STRING</span><p><p>The server cookies, parsed and usable for subsequent requests.</p>
 </p></li><li>http_error : <span class='text-info'>INTEGER</span><p><p>HTTP error code if response code was not 200.</p>
 </p></li><li>fileExists : <span class='text-info'>BOOLEAN</span><p><p>When overwriteFile is false and file exists, when error return and this flag set to true.</p>
 </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mdownloadFile6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.downloadFile(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.downloadFile(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mget'/><div class=' method  js ruby android ios wp8' id='mget'><h3><strong  >get</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mget1" data-toggle="tab">Description</a></li><li ><a href="#mget2" data-toggle="tab">Parameters</a></li><li ><a href="#mget3" data-toggle="tab">Callback</a></li><li ><a href="#mget4" data-toggle="tab">Return</a></li><li ><a href="#mget6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-get'><div class="tab-pane fade active in" id="mget1"><p>Perform a HTTP GET request.</p>

<blockquote><p>Note: This method will perform a POST if you send a body with it. If performing a GET, do not add a body to the call.</p></blockquote>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mget2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>Properties map.</p>
 Valid `properties` for this parameter are the properties avaliable to this API module. <a href='#Properties'>Check the property section</a> </p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mget3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>body : <span class='text-info'>STRING</span><p><p>The body of the HTTP response.</p>
 </p></li><li>headers : <span class='text-info'>HASH</span><p><p>A hash containing the response headers.</p>
 </p></li><li>cookies : <span class='text-info'>STRING</span><p><p>The server cookies, parsed and usable for subsequent requests.</p>
 </p></li><li>http_error : <span class='text-info'>INTEGER</span><p><p>HTTP error code if response code was not 200.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mget4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li>body : <span class='text-info'>STRING</span><p><p>The body of the HTTP response.</p>
 </p></li><li>headers : <span class='text-info'>HASH</span><p><p>A hash containing the response headers.</p>
 </p></li><li>cookies : <span class='text-info'>STRING</span><p><p>The server cookies, parsed and usable for subsequent requests.</p>
 </p></li><li>http_error : <span class='text-info'>INTEGER</span><p><p>HTTP error code if response code was not 200.</p>
 </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mget6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.get(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.get(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mhasCellNetwork'/><div class=' method  js ruby android ios' id='mhasCellNetwork'><h3><strong  >hasCellNetwork</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mhasCellNetwork1" data-toggle="tab">Description</a></li><li ><a href="#mhasCellNetwork4" data-toggle="tab">Return</a></li><li ><a href="#mhasCellNetwork6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-hasCellNetwork'><div class="tab-pane fade active in" id="mhasCellNetwork1"><p>Returns true if the device is connected to a cell network. Not supported on Windows CE.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mhasCellNetwork2"></div><div class="tab-pane fade" id="mhasCellNetwork3"></div><div class="tab-pane fade" id="mhasCellNetwork4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN</li></ul></div></div><div class="tab-pane fade" id="mhasCellNetwork6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.hasCellNetwork()</code> </li><li>Ruby: <code>Rho::Network.hasCellNetwork()</code></li></ul></li></ul></div></div></div>  </div><a name ='mhasNetwork'/><div class=' method  js ruby android ios' id='mhasNetwork'><h3><strong  >hasNetwork</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mhasNetwork1" data-toggle="tab">Description</a></li><li ><a href="#mhasNetwork4" data-toggle="tab">Return</a></li><li ><a href="#mhasNetwork6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-hasNetwork'><div class="tab-pane fade active in" id="mhasNetwork1"><p>Returns true if the device is connected to a network. Not supported on Windows CE.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mhasNetwork2"></div><div class="tab-pane fade" id="mhasNetwork3"></div><div class="tab-pane fade" id="mhasNetwork4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN</li></ul></div></div><div class="tab-pane fade" id="mhasNetwork6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.hasNetwork()</code> </li><li>Ruby: <code>Rho::Network.hasNetwork()</code></li></ul></li></ul></div></div></div>  </div><a name ='mhasWifiNetwork'/><div class=' method  js ruby android ios' id='mhasWifiNetwork'><h3><strong  >hasWifiNetwork</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mhasWifiNetwork1" data-toggle="tab">Description</a></li><li ><a href="#mhasWifiNetwork4" data-toggle="tab">Return</a></li><li ><a href="#mhasWifiNetwork6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-hasWifiNetwork'><div class="tab-pane fade active in" id="mhasWifiNetwork1"><p>Returns true if the device is connected to a WiFi network. Not supported on Windows CE.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mhasWifiNetwork2"></div><div class="tab-pane fade" id="mhasWifiNetwork3"></div><div class="tab-pane fade" id="mhasWifiNetwork4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN</li></ul></div></div><div class="tab-pane fade" id="mhasWifiNetwork6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.hasWifiNetwork()</code> </li><li>Ruby: <code>Rho::Network.hasWifiNetwork()</code></li></ul></li></ul></div></div></div>  </div><a name ='mpost'/><div class=' method  js ruby android ios wp8' id='mpost'><h3><strong  >post</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mpost1" data-toggle="tab">Description</a></li><li ><a href="#mpost2" data-toggle="tab">Parameters</a></li><li ><a href="#mpost3" data-toggle="tab">Callback</a></li><li ><a href="#mpost4" data-toggle="tab">Return</a></li><li ><a href="#mpost6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-post'><div class="tab-pane fade active in" id="mpost1"><p>Perform a HTTP Post.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mpost2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>The properties for the Network module can be used in this hash along with the following:</p>
 </p></li><ul><li>body : <span class='text-info'>STRING</span><p><p>The message body of the HTTP request.</p>
 </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mpost3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>body : <span class='text-info'>STRING</span><p><p>The body of the HTTP response.</p>
 </p></li><li>headers : <span class='text-info'>HASH</span><p><p>A hash containing the response headers.</p>
 </p></li><li>cookies : <span class='text-info'>STRING</span><p><p>The server cookies, parsed and usable for subsequent requests.</p>
 </p></li><li>http_error : <span class='text-info'>INTEGER</span><p><p>HTTP error code if response code was not 200.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mpost4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li>body : <span class='text-info'>STRING</span><p><p>The body of the HTTP response.</p>
 </p></li><li>headers : <span class='text-info'>HASH</span><p><p>A hash containing the response headers.</p>
 </p></li><li>cookies : <span class='text-info'>STRING</span><p><p>The server cookies, parsed and usable for subsequent requests.</p>
 </p></li><li>http_error : <span class='text-info'>INTEGER</span><p><p>HTTP error code if response code was not 200.</p>
 </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mpost6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.post(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.post(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstartStatusNotify'/><div class=' method  js ruby android ios' id='mstartStatusNotify'><h3><strong  >startStatusNotify</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> pollInterval, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mstartStatusNotify1" data-toggle="tab">Description</a></li><li ><a href="#mstartStatusNotify2" data-toggle="tab">Parameters</a></li><li ><a href="#mstartStatusNotify3" data-toggle="tab">Callback</a></li><li ><a href="#mstartStatusNotify4" data-toggle="tab">Return</a></li><li ><a href="#mstartStatusNotify6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-startStatusNotify'><div class="tab-pane fade active in" id="mstartStatusNotify1"><p>Start network status notifications. Notifications are sent when WiFi or Cell network appear / disappear. To check real Internet connectivity use detectConnection method. Not supported on Windows CE.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mstartStatusNotify2"><div><p><strong>Parameters</strong></p><ul><li>pollInterval : <span class='text-info'>INTEGER</span><span class='label '> Default: 20</span><p><p>The network status polling period for systems that can not notify network status change immediately. In seconds. Currently applies to iOS only as immediate status notification is not available on this platform.</p>
 </p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mstartStatusNotify3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>current_status : <span class='text-info'>STRING</span><p><p>Current status of network connection. Can be &ldquo;connected&rdquo; or &ldquo;disconnected&rdquo;.</p>
 </p></li><li>prev_status : <span class='text-info'>STRING</span><p><p>Previous status of network connection. Can be &ldquo;connected&rdquo;, &ldquo;disconnected&rdquo; or &ldquo;unknown&rdquo;."</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mstartStatusNotify4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mstartStatusNotify6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.startStatusNotify(<span class="text-info">INTEGER</span> pollInterval, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.startStatusNotify(<span class="text-info">INTEGER</span> pollInterval, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstopDetectingConnection'/><div class=' method  js ruby android ios wp8' id='mstopDetectingConnection'><h3><strong  >stopDetectingConnection</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mstopDetectingConnection1" data-toggle="tab">Description</a></li><li ><a href="#mstopDetectingConnection2" data-toggle="tab">Parameters</a></li><li ><a href="#mstopDetectingConnection4" data-toggle="tab">Return</a></li><li ><a href="#mstopDetectingConnection6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-stopDetectingConnection'><div class="tab-pane fade active in" id="mstopDetectingConnection1"><p>Ceases the network detection identified by the given callback.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mstopDetectingConnection2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mstopDetectingConnection3"></div><div class="tab-pane fade" id="mstopDetectingConnection4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mstopDetectingConnection6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.stopDetectingConnection(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.stopDetectingConnection(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstopStatusNotify'/><div class=' method  js ruby android ios' id='mstopStatusNotify'><h3><strong  >stopStatusNotify</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mstopStatusNotify1" data-toggle="tab">Description</a></li><li ><a href="#mstopStatusNotify4" data-toggle="tab">Return</a></li><li ><a href="#mstopStatusNotify6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-stopStatusNotify'><div class="tab-pane fade active in" id="mstopStatusNotify1"><p>Stop network status notifications. Not supported on Windows CE.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mstopStatusNotify2"></div><div class="tab-pane fade" id="mstopStatusNotify3"></div><div class="tab-pane fade" id="mstopStatusNotify4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mstopStatusNotify6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.stopStatusNotify()</code> </li><li>Ruby: <code>Rho::Network.stopStatusNotify()</code></li></ul></li></ul></div></div></div>  </div><a name ='muploadFile'/><div class=' method  js ruby android ios wp8' id='muploadFile'><h3><strong  >uploadFile</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#muploadFile1" data-toggle="tab">Description</a></li><li ><a href="#muploadFile2" data-toggle="tab">Parameters</a></li><li ><a href="#muploadFile3" data-toggle="tab">Callback</a></li><li ><a href="#muploadFile4" data-toggle="tab">Return</a></li><li ><a href="#muploadFile6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-uploadFile'><div class="tab-pane fade active in" id="muploadFile1"><p>Upload the specified file using HTTP POST.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="muploadFile2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>The properties for the Network module can be used in this hash along with the following:</p>
 </p></li><ul><li>filename : <span class='text-info'>STRING</span><p><p>The path and name of the file to be uploaded.</p>
 </p></li><li>body : <span class='text-info'>STRING</span><p><p>The message body of the HTTP request.</p>
 </p></li><li>fileContentType : <span class='text-info'>STRING</span><p><p>Content-Type header for the file, defaults to &ldquo;application/octet-stream&rdquo;.</p>
 </p></li><li>multipart : <span class='text-info'>ARRAY</span><p><p>Array of hashes containing file information.</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>HASH</span><p><p>Multipart properties.</p>
 </p></li><ul><li>filename : <span class='text-info'>STRING</span><p><p>The path and name of the file to be uploaded.</p>
 </p></li><li>contentType : <span class='text-info'>STRING</span><p><p>Content-Type header, defaults to &ldquo;application/octet-stream&rdquo;.</p>
 </p></li><li>filenameBase : <span class='text-info'>STRING</span><p><p>Base directory containing the :filename.</p>
 </p></li><li>name : <span class='text-info'>STRING</span><p><p>File type, defaults to &ldquo;blob&rdquo;.</p>
 </p></li></ul></ul></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="muploadFile3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>body : <span class='text-info'>STRING</span><p><p>The body of the HTTP response.</p>
 </p></li><li>headers : <span class='text-info'>HASH</span><p><p>A hash containing the response headers.</p>
 </p></li><li>cookies : <span class='text-info'>STRING</span><p><p>The server cookies, parsed and usable for subsequent requests.</p>
 </p></li><li>http_error : <span class='text-info'>INTEGER</span><p><p>HTTP error code if response code was not 200.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="muploadFile4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li>body : <span class='text-info'>STRING</span><p><p>The body of the HTTP response.</p>
 </p></li><li>headers : <span class='text-info'>HASH</span><p><p>A hash containing the response headers.</p>
 </p></li><li>cookies : <span class='text-info'>STRING</span><p><p>The server cookies, parsed and usable for subsequent requests.</p>
 </p></li><li>http_error : <span class='text-info'>INTEGER</span><p><p>HTTP error code if response code was not 200.</p>
 </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="muploadFile6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.uploadFile(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Network.uploadFile(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>



NOTE: The properties of this API Class cannot be accessed via setter or getter methods (unless otherwise noted). However they can be used in methods that allow a HASH or Array of properties to be passed in.

<a name='pauthPassword'></a><div class=' method  js ruby android ios wp8' id='pauthPassword'><h3><strong  >authPassword</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pauthPassword1" data-toggle="tab">Description</a></li><li ><a href="#pauthPassword6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-authPassword'><div class="tab-pane fade active in" id="pauthPassword1"><p>Password for basic authentication. You must also specify `authType=&lsquo;basic&rsquo;</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pauthPassword2"></div><div class="tab-pane fade" id="pauthPassword5"></div><div class="tab-pane fade" id="pauthPassword6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.authPassword</code> </li><li>Ruby: <code>Rho::Network.authPassword</code></li></ul></li></ul></div><p>This property cannot be accessed via setter or getter methods. It can be used in methods that allow a HASH or Array of properties to be passed in.</p></div></div>  </div><a name='pauthType'></a><div class=' method  js ruby android ios wp8' id='pauthType'><h3><strong  >authType</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pauthType1" data-toggle="tab">Description</a></li><li ><a href="#pauthType5" data-toggle="tab">Values</a></li><li ><a href="#pauthType6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-authType'><div class="tab-pane fade active in" id="pauthType1"><p>Type of authentication used for this request. Check the list of available options below. Leaving blank will result in no authentication type.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pauthType2"></div><div class="tab-pane fade" id="pauthType5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Constant: Rho.Network.AUTH_BASIC (For Ruby use "::" instead of ".")<br/> String: basic </dt><dd><p>Basic Authentication Type. uses authUser and authPassword.</p>
</dt></dl></div><div class="tab-pane fade" id="pauthType6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.authType</code> </li><li>Ruby: <code>Rho::Network.authType</code></li></ul></li></ul></div><p>This property cannot be accessed via setter or getter methods. It can be used in methods that allow a HASH or Array of properties to be passed in.</p></div></div>  </div><a name='pauthUser'></a><div class=' method  js ruby android ios wp8' id='pauthUser'><h3><strong  >authUser</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pauthUser1" data-toggle="tab">Description</a></li><li ><a href="#pauthUser6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-authUser'><div class="tab-pane fade active in" id="pauthUser1"><p>User name for basic authentication. You must also specify <code>authType='basic'</code></p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pauthUser2"></div><div class="tab-pane fade" id="pauthUser5"></div><div class="tab-pane fade" id="pauthUser6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.authUser</code> </li><li>Ruby: <code>Rho::Network.authUser</code></li></ul></li></ul></div><p>This property cannot be accessed via setter or getter methods. It can be used in methods that allow a HASH or Array of properties to be passed in.</p></div></div>  </div><a name='pheaders'></a><div class=' method  js ruby android ios wp8' id='pheaders'><h3><strong  >headers</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>HASH</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pheaders1" data-toggle="tab">Description</a></li><li ><a href="#pheaders6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-headers'><div class="tab-pane fade active in" id="pheaders1"><p>List of HTTP headers to be used in the network  request.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pheaders2"></div><div class="tab-pane fade" id="pheaders5"></div><div class="tab-pane fade" id="pheaders6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.headers</code> </li><li>Ruby: <code>Rho::Network.headers</code></li></ul></li></ul></div><p>This property cannot be accessed via setter or getter methods. It can be used in methods that allow a HASH or Array of properties to be passed in.</p></div></div>  </div><a name='phttpVerb'></a><div class=' method  js ruby android ios wp8' id='phttpVerb'><h3><strong  ><span class="text-info">httpVerb</span></strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#phttpVerb1" data-toggle="tab">Description</a></li><li ><a href="#phttpVerb6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-httpVerb'><div class="tab-pane fade active in" id="phttpVerb1"><span class='label label-info'>Replaces:http_command</span> <p>HTTP verb to be used in the network request.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="phttpVerb2"></div><div class="tab-pane fade" id="phttpVerb5"></div><div class="tab-pane fade" id="phttpVerb6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Network.httpVerb</code> </li><li>Ruby: <code>Rho::Network.httpVerb</code></li></ul></li></ul></div><p>This property cannot be accessed via setter or getter methods. It can be used in methods that allow a HASH or Array of properties to be passed in.</p></div></div>  </div><a name='presponseTimeout'></a><div class=' method  js ruby android ios wp8' id='presponseTimeout'><h3><strong  >responseTimeout</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#presponseTimeout1" data-toggle="tab">Description</a></li><li ><a href="#presponseTimeout2" data-toggle="tab">Params</a></li><li ><a href="#presponseTimeout6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-responseTimeout'><div class="tab-pane fade active in" id="presponseTimeout1"><p>Timeout of network requests in seconds. This property has module scope. Do not pass it as hash parameter to methods, use property accessors instead.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="presponseTimeout2"><p><strong>Default:</strong> 30</p></div><div class="tab-pane fade" id="presponseTimeout5"></div><div class="tab-pane fade" id="presponseTimeout6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.responseTimeout</code></li></ul></li></ul></div></div></div>  </div><a name='purl'></a><div class=' method  js ruby android ios wp8' id='purl'><h3><strong  >url</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#purl1" data-toggle="tab">Description</a></li><li ><a href="#purl6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-url'><div class="tab-pane fade active in" id="purl1"><p>URL of the request. This should be fully formatted URL like http://domain.com/</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="purl2"></div><div class="tab-pane fade" id="purl5"></div><div class="tab-pane fade" id="purl6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.url</code></li></ul></li></ul></div></div></div>  </div><a name='pverifyPeerCertificate'></a><div class=' method  js ruby android ios' id='pverifyPeerCertificate'><h3><strong  ><span class="text-info">verifyPeerCertificate</span></strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pverifyPeerCertificate1" data-toggle="tab">Description</a></li><li ><a href="#pverifyPeerCertificate2" data-toggle="tab">Params</a></li><li ><a href="#pverifyPeerCertificate6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-verifyPeerCertificate'><div class="tab-pane fade active in" id="pverifyPeerCertificate1"><span class='label label-info'>Replaces:ssl_verify_peer</span> <p>Verify SSL certificates. When set to false it will allow untrusted certificates.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pverifyPeerCertificate2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="pverifyPeerCertificate5"></div><div class="tab-pane fade" id="pverifyPeerCertificate6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.verifyPeerCertificate</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Request a notification from the system when network availability changes</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>When you need to be notified of changes in the status of the network (connected / disconnected), use Network.startStatusNotify.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript


    function status_notify_callback(params) {
      alert("Network status changed from "+params["prev_status"]+" to "+params["current_status"]);
    }

    function start_status_notify() {
      # Request the system to check every 3 seconds and call us back if there is a change in network connectivity
      Rho.Network.startStatusNotify(3000, status_notify_callback);
    }

    function stop_status_notify() {
      // Stop network status notifications
      Rho.Network.stopStatusNotify();
    }


                 </code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby


  def start_status_notify
    # Request the system to check every 3 seconds and call us back if there is a change in network connectivity
    Rho::Network.startStatusNotify(3000, url_for(:action =&gt; :status_notify_callback))
    Alert.show_popup "Started network status notifications"
  end

  # This is our notification that the status of the network changed. old_status and new_status can be "disconnected" or "connected"
  def status_notify_callback
    Alert.show_popup("Network status changed from #{@params["prev_status"]} to #{@params["current_status"]}")
  end


  def stop_status_notify
    # Stop network status notifications
    Rho::Network.stopStatusNotify
    Alert.show_popup "Stopped network status notifications"
  end

                 </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Check whether the network is available</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>You can check whether the mobile, WiFi or other network is available. This can be useful for example if you only want to perform large data transfers on WiFi and avoid doing them while on the cell network.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript


    function network_availability() {
      // shows the network availability for...
      // Cell network
      var cell_network = Rho.Network.hasCellNetwork()
      // Wi-Fi network
      var wifi_network = Rho.Network.hasWifiNetwork()
      // Any network
      var network = Rho.Network.hasNetwork()

      alert("Cell network: "+cell_network+"\nWi-Fi network: "+wifi_network+"\nNetwork: "+network);
    }

                 </code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby


    # check the network availability for...
    # Cell network
    cell_network = Rho::Network.hasCellNetwork
    # Wi-Fi
    wifi_network = Rho::Network.hasWifiNetwork
    # Any network
    network = Rho::Network.hasNetwork

                 </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Download file and save it to permanent storage</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">
<p>Download any file from an external server and store it in your device.</p>
<ul class='nav nav-tabs' id='exI2-S0Tab'><li class='active'><a href='#exI2-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S0JS'><pre class='CodeRay'><code>:::javascript


function download_file_callback(params) {
  if (params["status"] == "ok") {
    alert("Download Succeeded, path is /public/images/sample.png");
  } else {
    alert("Download Failed");
  }
}

function download_file() {
  // Download a file to the specified filename. Be careful with the overwriteFile parameter!
  downloadfileProps = {
    url: "http://www.google.com/images/icons/product/chrome-48.png",
    filename: Rho.Application.publicFolder+"/images/sample.png",
    overwriteFile: true
  };
  Rho.Network.downloadFile(downloadfileProps, download_file_callback);
}

                 </code></pre></div><div class='tab-pane' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby


  def download_file
      #Download a file to the specified filename.
      downloadfileProps = Hash.new
      downloadfileProps["url"]='http://www.google.com/images/icons/product/chrome-48.png'
      downloadfileProps["filename"] = Rho::Application.publicFolder+"/images/sample.png"
      downloadfileProps["overwriteFile"] = true
      Rho::Network.downloadFile(downloadfileProps, url_for(:action =&gt; :download_file_callback))
  end

  def download_file_callback
    if @params["status"] == "ok"
        Alert.show_popup "Download Success,path is /public/images/sample.png "
    else
        Alert.show_popup "Download Failed"
    end
  end


                 </code></pre></div></div>  </div></div></div></div><a name='e3'></a><div class=' example' id='e3'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample3"><strong>Upload files via HTTP POST</strong></div><div id="cExample3" class="accordion-body">  <div class="accordion-inner">
<p>You can upload any file to an external server via HTTP POST and be notified whether the transfer succeeded or not.</p>
<ul class='nav nav-tabs' id='exI3-S0Tab'><li class='active'><a href='#exI3-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI3-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI3-S0JS'><pre class='CodeRay'><code>:::javascript


function upload_file_callback(params) {
  // Check the result of the upload and act accordingly
  if (params["status"] == "ok") {
    alert("Upload Succeeded.");
  } else {
    alert("Upload Failed.");
  }
}

function upload_file() {
    // Upload the specified file using HTTP POST.
    uploadfileProps = {
      url: "http://www.example.com",
      filename: Rho.Application.publicFolder+"/images/backButton.png",
      body: "uploading file",
      fileContentType: "image/png"
    };

    Rho.Network.uploadFile(uploadfileProps, upload_file_callback);
}

                 </code></pre></div><div class='tab-pane' id='exI3-S0RUBY'><pre class='CodeRay'><code>:::ruby


  def upload_file
    # Upload the specified file using HTTP POST.
    uploadfileProps = Hash.new
    uploadfileProps['url'] = "http://www.example.com"
    uploadfileProps['filename'] = Rho::Application.publicFolder+"/images/backButton.png"
    uploadfileProps['body'] = "uploading file"
    uploadfileProps['fileContentType']="image/png"
    Rho::Network.uploadFile(uploadfileProps, url_for(:action =&gt; :upload_file_callback))
  end

  def upload_file_callback
    if @params['status'] == "ok"
        Alert.show_popup "Upload Succeeded."
    else
        Alert.show_popup "Upload Failed."
    end
  end

                 </code></pre></div></div>  </div></div></div></div><a name='e4'></a><div class=' example' id='e4'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample4"><strong>Network POST Using Ruby's Lambda</strong></div><div id="cExample4" class="accordion-body">  <div class="accordion-inner">
<p>You can also define network request callbacks with this API using Ruby&rsquo;s lambda functions, similar to how you would use a JavaScript anonymous function for a callback. Simply define your callback, using lambda, in place of the callback parameter in the method call as such.</p>
<ul class='nav nav-tabs' id='exI4-S0Tab'><li class='active'><a href='#exI4-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI4-S0RUBY'><pre class='CodeRay'><code>:::ruby

Rho::Network.post(
  {
    url:      url,
    headers:  { 'Content-Type' =&gt; 'application/json', 'Accept' =&gt; 'application/json' },
    body:     json
  },
  lambda do |response; body, headers, cookies, http_status|

    body = response['body']
    headers = response['headers']
    cookies = response['cookies']
    http_status = response['http_status']

    app_info "TESTING got POST callback"
    app_info "body = #{body.inspect}"
    app_info "headers = #{headers.inspect}"
    app_info "cookies = #{cookies.inspect}"
    app_info "http_error = #{http_error.class} #{http_error.inspect}"
    app_info "testing lambda context, url = '#{url}'"
  end
)

                            </code></pre></div></div>  </div></div></div></div>
<a name='Remarks'></a>
<h2><i class='icon-warning-sign'></i>Remarks</h2>

<a name='r0'></a><div class=' remarks' id='r0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark0"><strong>Detecting a connection through proxies</strong></div><div id="cRemark0" class="accordion-body">  <div class="accordion-inner"><p>Because the detectConnection method is protocol agnostic, it will not communicate through HTTP proxies to reach a specified URL. In order to determine if you are connected when sitting behind a proxy you should call the method to attempt to connect to your proxy on the appropriate port. A successful connection to the proxy should be taken to assume the device is connected to a network. When configuring your WAN connection bear in mind that the proxy settings defined in the RhoElements configuration file will take precedence.</p>
  </div></div></div></div><a name='r1'></a><div class=' remarks' id='r1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark1"><strong>Detecting a connection over WAN</strong></div><div id="cRemark1" class="accordion-body">  <div class="accordion-inner"><p>When detecting a network connection over WAN bear in mind if you specify a low networkPollInterval your device will frequently have an active data connection and may prevent the device occasionally from accepting incoming calls.</p>
  </div></div></div></div><a name='r2'></a><div class=' remarks' id='r2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark2"><strong>Preventing access to the device (WEH / WM)</strong></div><div id="cRemark2" class="accordion-body">  <div class="accordion-inner"><p>Receiving phone calls or texts whilst running RhoElements will cause the start button to be displayed on Windows Embedded Handheld devices, potentially offering users access to the operating system. It is recommended to set the following registry keys to disable Operating System access on Windows Embedded Handheld as required. The registry keys will be applied after a warm boot, omit them entirely to restore the Start and &lsquo;X&rsquo; icons.</p>

<pre>
[HKEY_LOCAL_MACHINE\Software\Microsoft\Shell\BubbleTiles]   Location in Registry
"HardwareStartKeyEnabled"=dword:00000001                    Prevents the Start icon from appearing in the bottom left
"HardwareDoneKeyEnabled"=dword:00000001                     Prevents the 'X' icon from appearing in the bottom right
</pre>



  </div></div></div></div></div>